# friggin-tuff-particle-simulation

./: Cargo.toml
shaders/: compute.wgsl  render.wgsl
shaders/compute/: fade_out.wgsl  main.wgsl
src/: constants.rs  engine.rs  main.rs  renderer.rs
src/renderer/: misc.rs  mod.rs  shader_data.rs  ui.rs
