[package]
name = "friggin-tuff-particle-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.1"
winit = "0.30.13"
anyhow = "1.0.102"
pollster = "0.4.0"
bytemuck = "1.25.0"
egui = "0.34.1"
egui-winit = "0.34.1"
egui-wgpu = "0.34.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.120"
